--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "birkahve",
-  "version": "1.0.0",
-  "description": "",
-  "main": "burak.js",
-  "scripts": {
-    "start": "node serdar.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
-}
+    "name": "calismam",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": ""
+  }
+  
